# vulkan-renderer

./: .gitignore  CMakeLists.txt  README.md
assets/frame_graphs/: cull_graph.json  main.hgraph  main.json
assets/shaders/: basic.frag.glsl  basic.vert.glsl  culling.glsl  culling_late.glsl  debug_light.glsl  debug_rendering.h  depth.vert.glsl  depth_pyramid.glsl  directional_shadow_map_ext.mesh.glsl  directional_shadow_map_ext.task.glsl  fullscreen.glsl  gbuffer.glsl  light_debug.glsl  lighting.h  main.glsl  mesh.frag.glsl  mesh.h  meshlet.glsl  meshlet_ext.glsl  meshlet_ext.mesh.glsl  meshlet_ext.task.glsl  meshlet_nv.glsl  pbr.frag.glsl  pbr.glsl  scene.h
assets/shaders/cache/: Light.cache  fullscreen.cache  geometry.cache  light_debug.cache  main.cache  pbr.cache  pbr_cull.cache  pbr_lighting.cache  pbr_no_cull.cache
assets/shaders/lights/: example.txt  example.vert  example.vert.spv  light.frag.glsl  light.geom.glsl  light.vert.glsl
assets/shaders/programs/: culling.json  debug.json  geometry.json  light_debug.json  meshlet.json  meshlet_ext.json  meshlet_nv.json  pbr_lighting.json  shadow_maps.json
src/: main.cpp
src/Application/: Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  Window.cpp  Window.hpp
src/Core/: Array.hpp  Assert.hpp  Bit.cpp  Bit.hpp  Color.cpp  Color.hpp  DataStructures.cpp  DataStructures.hpp  File.cpp  File.hpp  Gltf.cpp  Gltf.hpp  HashMap.hpp  Log.cpp  Log.hpp  Memory.cpp  Memory.hpp  Numerics.cpp  Numerics.hpp  Platform.hpp  Process.cpp  Process.hpp  ResourceManager.cpp  ResourceManager.hpp  Service.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp
src/Renderer/: AsynchronousLoader.cpp  AsynchronousLoader.hpp  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  FrameGraph.cpp  FrameGraph.hpp  GPUDevice.cpp  GPUDevice.hpp  GPUEnum.hpp  GPUProfiler.cpp  GPUProfiler.hpp  GPUResources.cpp  GPUResources.hpp  HelixImgui.cpp  HelixImgui.hpp  Node.cpp  Node.hpp  Renderer.cpp  Renderer.hpp  ResourcesLoader.cpp  ResourcesLoader.hpp  Scene.cpp  Scene.hpp  SpirvParser.cpp  SpirvParser.hpp
